# openakita

./: .gitignore  BATTLE_ROOM_ENHANCEMENTS_SUMMARY.md  BATTLE_ROOM_PHASE2_SUMMARY.md  BATTLE_ROOM_REFACTOR_SUMMARY.md  COMMAND_CENTER_FINAL_SUMMARY.md  COMPREHENSIVE_INTEGRATION_REVIEW.md  Dockerfile  INTEGRATION_REVIEW_FINAL.md  INTEGRATION_REVIEW_REPORT.md  PROJECT_REVIEW.md  README.md  README_CN.md  _exploratory_test_report.md  commander_config.yaml  docker-compose.yml  healing_config.yaml  pyproject.toml  requirements.txt  trust_config.yaml
auth_api/: auth_core.py  rate_limiter.py  user_db.py
bug-reports/: desktop-chat-concurrent-streaming-fix.md
docs/: BATTLE_ROOM_ARCHITECTURE.md  DINGTALK_IM_NOTES.md  FEISHU_IM_NOTES.md  MIGRATION_GUIDE.md  TELEGRAM_IM_NOTES.md  WECHAT_IM_NOTES.md  WEWORK_WS_IM_NOTES.md  agent-org-user-guide.md  agent-sharing-spec.md  android-app-architecture.md  android-architecture.md  auth_refactor_plan.md  code-review-process.md  (+17 more)
docs-site/: index.md  package-lock.json  package.json  versions.md
openakita-plugin-sdk/: README.md  pyproject.toml
openakita-plugin-sdk/docs/: README.md  api-reference.md  cross-ecosystem.md  getting-started.md  hooks.md  permissions.md  plugin-json.md  plugin-ui.md  rest-api.md  testing.md
openakita-plugin-sdk/docs/examples/: channel-plugin.md  llm-plugin.md  mcp-plugin.md  skill-plugin.md  ui-plugin.md
openakita-plugin-sdk/src/openakita_plugin_sdk/: __init__.py  channel.py  core.py  decorators.py  scaffold.py  testing.py  version.py
openakita-plugin-sdk/src/openakita_plugin_sdk/web/: bootstrap.js
(+1035 files in other folders)
